# CardVault

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  FFMPEG_SETUP.md  GITHUB_RELEASES_AND_UPDATES.md  PACKAGING.md  USER_GUIDE.md
scripts/: prepare-assets.js  prepare-ffmpeg.js
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: document.rs  lib.rs  main.rs
src/main/: main.js  preload.cjs
src/renderer/: App.jsx  main.jsx  native.js  styles.css
web/: index.html  styles.css
