[package]
name = "cardvault"
version = "0.1.5"
description = "CardVault desktop app"
authors = ["CardVault"]
edition = "2021"

[lib]
name = "cardvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
calamine = "0.26"
fs2 = "0.4"
lopdf = "0.35"
printpdf = "0.5"
quick-xml = "0.37"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
